--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,24 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
-    background-color: #ecebff
+    background-color: #ecebff;
+    color: #333333;
 }
 
 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    filter: url(#noiseFilter);
 }
 
 input, label {
     display: block;
+}
+
+svg {
+    width: 0;
+    height: 0;
 }
 
 .input-block {
@@ -21,6 +28,7 @@ input, label {
 }
 
 .sidebar {
+    position: relative;
     flex: 1;
     height: 100vh;
 }
@@ -44,4 +52,13 @@ input, label {
     display: flex;
     gap: 10px;
     flex-flow: row wrap;
+
+    box-shadow: 0px 3px 5px #ccc;
+}
+
+#credit {
+    position: absolute;
+    bottom: 0;
+    left: 5px;
+    opacity: 0.6;
 }
