--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sometype+Mono&display=swap');
+
 body {
     display: flex;
     margin: 0;
@@ -5,6 +7,8 @@ body {
     height: 100%;
     background-color: #ecebff;
     color: #333333;
+    font-family: 'Sometype Mono', monospace;
+    overflow: hidden;
 }
 
 img {
@@ -16,6 +20,18 @@ img {
 
 input, label {
     display: block;
+}
+
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+}
+
+button {
+    margin: 20px;
 }
 
 svg {
@@ -40,20 +56,32 @@ svg {
 }
 
 .header {
-    margin: 120px 30px 60px;
+    margin: 120px 30px 80px;
     font-size: 28px;
 }
 
-.input-container {
+.header, h1, button {
+    text-shadow: 0 0 3px #c8b6ff;
+}
+
+label {
+    color: #c8b6ff;
+}
+
+
+.middle {
     flex: 1;
     padding: 20px;
-    background-color: white;
-
-    display: flex;
-    gap: 10px;
-    flex-flow: row wrap;
-
+    padding-top: 5px;
+    padding-bottom: 40px;
+    background-color: rgba(255, 255, 255, 0.6);
     box-shadow: 0px 3px 5px #ccc;
+}
+
+.input-container {
+    display: flex;
+    gap: 50px;
+    flex-flow: row wrap;
 }
 
 #credit {
